# Skype

./: .clang-tidy  .gdb_history  .gitignore  .gitmodules  BUGS.txt  CMakeLists.txt  Makefile  README.md  build.sh  compile_commands.json  config.conf  config_network.sh  daemon.sh  queries.sql  setup_postgres.sql  tall libpq-dev postgresql-server-dev-allhkj:q
src/client/: CMakeLists.txt  README.md  client.cpp  contacts.cpp  main.cpp  peer_to_peer.cpp  program.cpp
src/client/av/: audio_converter.cpp  audio_device.cpp  audio_device_config.cpp  audio_playback.cpp  av_playback.cpp  av_settings.cpp  av_stream.cpp  lock_free_audio_queue.cpp  playback.cpp  video_playback.cpp  webcam.cpp
src/client/gui/: call_gui.cpp  central_gui.cpp  central_jobs.cpp  chat.cpp  chat_gui.cpp  chat_history.cpp  contact_gui.cpp  gui_message.cpp  login_gui.cpp  menu_gui.cpp  my_gui.cpp  ring_gui.cpp  sidebar.cpp  skype_gui.cpp  toolbar.cpp  welcome.cpp  welcome_gui.cpp
src/client/gui/Qt6/Qt6/: Qt6Targets.cmake  qt.toolchain.cmake
src/client/gui/Qt6/Qt6BuildInternals/: QtBuildInternalsExtra.cmake
src/client/gui/Qt6/Qt6BundledLibjpeg/: Qt6BundledLibjpegTargets-relwithdebinfo.cmake  Qt6BundledLibjpegTargets.cmake  Qt6BundledLibjpegVersionlessTargets.cmake
src/client/gui/Qt6/Qt6BundledLibpng/: Qt6BundledLibpngDependencies.cmake  Qt6BundledLibpngTargets.cmake
src/client/gui/Qt6/Qt6Concurrent/: Qt6ConcurrentTargets-relwithdebinfo.cmake  Qt6ConcurrentTargets.cmake
src/client/gui/Qt6/Qt6Core/: Qt6CoreDependencies.cmake  Qt6CoreTargets-relwithdebinfo.cmake  Qt6CoreTargets.cmake
src/client/gui/Qt6/Qt6DBus/: Qt6DBusConfig.cmake  Qt6DBusConfigVersion.cmake  Qt6DBusDependencies.cmake  Qt6DBusTargets-relwithdebinfo.cmake  Qt6DBusTargets.cmake
src/client/gui/Qt6/Qt6DBusTools/: Qt6DBusToolsConfigVersion.cmake  Qt6DBusToolsDependencies.cmake
src/client/gui/Qt6/Qt6Designer/: Qt6DesignerConfig.cmake  Qt6DesignerConfigVersion.cmake  Qt6DesignerDependencies.cmake  Qt6DesignerTargets-relwithdebinfo.cmake  Qt6DesignerTargets.cmake  Qt6QQuickWidgetPluginConfigVersion.cmake
src/client/gui/Qt6/Qt6DesignerComponentsPrivate/: Qt6DesignerComponentsPrivateConfig.cmake  Qt6DesignerComponentsPrivateConfigVersion.cmake  Qt6DesignerComponentsPrivateDependencies.cmake  Qt6DesignerComponentsPrivateTargets-relwithdebinfo.cmake  Qt6DesignerComponentsPrivateTargets.cmake
src/client/gui/Qt6/Qt6DeviceDiscoverySupportPrivate/: Qt6DeviceDiscoverySupportPrivateDependencies.cmake  Qt6DeviceDiscoverySupportPrivateTargets.cmake
src/client/gui/Qt6/Qt6EglFSDeviceIntegrationPrivate/: Qt6EglFSDeviceIntegrationPrivateConfig.cmake  Qt6EglFSDeviceIntegrationPrivateConfigVersion.cmake  Qt6EglFSDeviceIntegrationPrivateDependencies.cmake  Qt6EglFSDeviceIntegrationPrivateTargets-relwithdebinfo.cmake  Qt6EglFSDeviceIntegrationPrivateTargets.cmake
src/client/gui/Qt6/Qt6EglFsKmsSupportPrivate/: Qt6EglFsKmsSupportPrivateConfig.cmake  Qt6EglFsKmsSupportPrivateConfigVersion.cmake  Qt6EglFsKmsSupportPrivateDependencies.cmake  Qt6EglFsKmsSupportPrivateTargets-relwithdebinfo.cmake  Qt6EglFsKmsSupportPrivateTargets.cmake
src/client/gui/Qt6/Qt6FbSupportPrivate/: Qt6FbSupportPrivateDependencies.cmake  Qt6FbSupportPrivateTargets.cmake
src/client/gui/Qt6/Qt6Gui/: Qt6GuiDependencies.cmake  Qt6GuiTargets-relwithdebinfo.cmake  Qt6GuiTargets.cmake  Qt6QComposePlatformInputContextPluginConfigVersion.cmake  Qt6QEglFSEmulatorIntegrationPluginConfigVersion.cmake  Qt6QEglFSIntegrationPluginConfigVersion.cmake  Qt6QEglFSKmsEglDeviceIntegrationPluginConfigVersion.cmake  Qt6QEglFSX11IntegrationPluginConfigVersion.cmake  Qt6QEvdevKeyboardPluginConfigVersion.cmake  Qt6QEvdevMousePluginConfigVersion.cmake  Qt6QEvdevTabletPluginConfigVersion.cmake  Qt6QEvdevTouchScreenPluginConfigVersion.cmake  Qt6QGtk3ThemePluginConfigVersion.cmake  Qt6QIbusPlatformInputContextPluginConfigVersion.cmake  Qt6QLinuxFbIntegrationPluginConfigVersion.cmake  Qt6QMinimalEglIntegrationPluginConfigVersion.cmake  Qt6QVkKhrDisplayIntegrationPluginConfigVersion.cmake  Qt6QVncIntegrationPluginConfigVersion.cmake  Qt6QWaylandEglPlatformIntegrationPluginConfigVersion.cmake  Qt6QWaylandIntegrationPluginConfigVersion.cmake  Qt6QXcbEglIntegrationPluginConfigVersion.cmake  Qt6QXcbGlxIntegrationPluginConfigVersion.cmake  Qt6QXcbIntegrationPluginConfigVersion.cmake  Qt6QXdgDesktopPortalThemePluginConfigVersion.cmake
src/client/gui/Qt6/Qt6HarfbuzzPrivate/: Qt6HarfbuzzPrivateTargets.cmake  Qt6HarfbuzzPrivateVersionlessTargets.cmake
src/client/gui/Qt6/Qt6Help/: Qt6HelpConfig.cmake  Qt6HelpConfigVersion.cmake  Qt6HelpDependencies.cmake  Qt6HelpTargets-relwithdebinfo.cmake  Qt6HelpTargets.cmake
src/client/gui/Qt6/Qt6InputSupportPrivate/: Qt6InputSupportPrivateConfig.cmake  Qt6InputSupportPrivateConfigVersion.cmake  Qt6InputSupportPrivateDependencies.cmake  Qt6InputSupportPrivateTargets.cmake
src/client/gui/Qt6/Qt6JpegPrivate/: Qt6JpegPrivateTargets.cmake  Qt6JpegPrivateVersionlessTargets.cmake
src/client/gui/Qt6/Qt6KmsSupportPrivate/: Qt6KmsSupportPrivateConfig.cmake  Qt6KmsSupportPrivateConfigVersion.cmake  Qt6KmsSupportPrivateDependencies.cmake  Qt6KmsSupportPrivateTargets.cmake
src/client/gui/Qt6/Qt6LabsAnimation/: Qt6LabsAnimationConfig.cmake  Qt6LabsAnimationConfigVersion.cmake  Qt6LabsAnimationDependencies.cmake  Qt6LabsAnimationTargets.cmake  (+1 more)
src/client/gui/notification/: notification.cpp
src/client/gui/stylesheet/: Fibrary.qss  Hookmark.qss
src/client/gui/ui/: call.ui  central.ui  chat.ui  contact.ui  menu.ui  ring.ui  ring.ui.autosave  skype_gui.ui  welcome.ui  welcome.ui.autosave
src/client/job/: job_bus.cpp  job_queue.cpp
src/client/p2p_test/: CMakeLists.txt  p2p_test.cpp
src/client/user/: accounts.cpp  call.cpp  chat.cpp  contacts.cpp  user.cpp
src/server/: CMakeLists.txt  README.md  call_controllers.cpp  chat_controller.cpp  controller_utils.cpp  controllers.cpp  main.cpp  postgres.cpp  router.cpp  server.cpp  token_gen.cpp  user.cpp  user_chat.cpp  user_controllers.cpp
src/server/test_client/: CMakeLists.txt  Makefile  cmake_install.cmake  test_client.cpp
(+542 files in other folders)
